<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapsFragment"
        android:title="@string/maps_fragment" />

    <item
        android:id="@+id/listCityFragment"
        android:title="@string/listcity_fragment" />

    <item
        android:id="@+id/weatherFragment"
        android:title="@string/weather_fragment" />

</menu>