...
        <variable name="wind" type="by.startandroid.weatherforecastdemo.data.Wind"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fr_container_weather"
        tools:context=".ui.weather.WeatherFragment">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
